--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
-          GITHUB_TOKEN: ${{ secrets.DEPLOY_KEY }}
+          GITHUB_TOKEN: ${{ secrets.DEPLOY_KEY2 }}
           REPOSITORY_NAME: JenniferStohler/blog # TODO 
           BRANCH: gh-pages 
           FOLDER: src/.vuepress/dist 
